--- a/cucumber.yml
+++ b/cucumber.yml
@@ -1,2 +1,3 @@
 default: --format progress --language pt features
-
+autotest-all: --format progress --language pt  features
+autotest: --format progress --language pt  features
